--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,32 @@
+# Python bytecode and cache
 __pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Virtual Environment
+venv/
+env/
+.venv/
+
+# Environment variables and secrets
+# NEVER commit your secrets!
 .env
+
+# IDE and Editor Folders
 .vscode/
+.idea/
+
+# OS-generated files
+.DS_Store
+Thumbs.db
+
+# Build artifacts
+build/
+dist/
+*.egg-info/
+
+# Test artifacts
+.pytest_cache/
+.coverage
+htmlcov/
